# walk-the-dog

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: browser.rs  engine.rs  game.rs  lib.rs  segment.rs  sound.rs
src/engine/: audio.rs  game_loop.rs  image.rs  key_state.rs  rect.rs  renderer.rs  sprite_sheet.rs
src/game/: barrier.rs  obstacle.rs  platform.rs  redhatboy.rs  walk_the_dog.rs
static/: index.html  styles.css
tests/: app.rs
