[package]
name = "walk-the-dog"
version = "0.1.0"
edition = "2021"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.89"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.70"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["AudioBuffer", "AudioBufferSourceNode", "AudioContext", "AudioDestinationNode", "CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "HtmlImageElement", "KeyboardEvent", "Performance", "Response", "Window", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
